--- a/src/react.html
+++ b/src/react.html
@@ -11,6 +11,7 @@
   <body>
     <h1>react</h1>
     <div id="app"></div>
+    <div id="demo"></div>
     <!-- <require src="./react/index.js" inline=false gzip=false babel=false > -->
   </body>
 </html>
