--- a/src/theme.html
+++ b/src/theme.html
@@ -38,45 +38,45 @@
       <button type="button" class="theme-pink">pink</button>
     </div>
     <script>
-      let btnGroup = document.querySelector(".input-group");
+      let btnGroup = document.querySelector('.input-group');
       let themtCache = null;
 
       function isLocal() {
-        return location.href.includes("localhost");
+        return location.href.includes('localhost');
       }
 
       function getTheme() {
-        const url = isLocal() ? "/mock/index.json" : "/htmlCollect/mock/index.json";
+        const url = isLocal() ? '/mock/index.json' : '/htmlCollect/mock/index.json';
         return fetch(url, {
-          cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-          credentials: "same-origin", // include, same-origin, *omit
+          cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+          credentials: 'same-origin', // include, same-origin, *omit
           headers: {
-            "user-agent": navigator.userAgent,
+            'user-agent': navigator.userAgent,
           },
-          method: "GET", // *GET, POST, PUT, DELETE, etc.
-          mode: "cors", // no-cors, cors, *same-origin
-          referrer: "no-referrer", // *client, no-referrer
+          method: 'GET', // *GET, POST, PUT, DELETE, etc.
+          mode: 'cors', // no-cors, cors, *same-origin
+          referrer: 'no-referrer', // *client, no-referrer
         }).then(response => response.json());
       }
 
       function setTheme(t) {
-        let root = document.querySelector("html");
+        let root = document.querySelector('html');
         root.style.cssText = `--baseColor: ${t}; --secondColor: #ff9800`;
       }
 
       btnGroup.addEventListener(
-        "click",
+        'click',
         function(ev) {
           let target = ev.target;
 
-          if (target.nodeName == "BUTTON") {
-            let theme = target.className.split("-")[1];
+          if (target.nodeName == 'BUTTON') {
+            let theme = target.className.split('-')[1];
             if (themtCache != null) {
-              setTheme(themtCache["theme"][theme].baseColor);
+              setTheme(themtCache['theme'][theme].baseColor);
             } else {
               getTheme().then(res => {
                 console.log(res);
-                setTheme(res["theme"][theme].baseColor);
+                setTheme(res['theme'][theme].baseColor);
                 themtCache = res;
               });
             }
@@ -87,28 +87,28 @@
     </script>
     <script>
       function preload() {
-        ["a", "b"].forEach(item => {
-          let l = document.createElement("link");
+        ['a', 'b'].forEach(item => {
+          let l = document.createElement('link');
           l.href = `css/${item}.css`;
-          l.rel = "stylesheet alternate";
-          l.title = "disabled";
-          l.type = "text/css";
+          l.rel = 'stylesheet alternate';
+          l.title = 'disabled';
+          l.type = 'text/css';
           document.head.appendChild(l);
-          l.addEventListener("load", () => {
+          l.addEventListener('load', () => {
             console.log(`loading`);
           });
         });
       }
       window.onload = function() {
         preload();
-        let radios = document.querySelectorAll("input");
+        let radios = document.querySelectorAll('input');
         let links = document.querySelectorAll("link[rel*='stylesheet']");
         Array.from(radios).forEach(item => {
-          item.addEventListener("change", function(ev) {
+          item.addEventListener('change', function(ev) {
             const type = ev.target.dataset.type;
             Array.from(links).forEach(l => {
               l.disabled = true;
-              if (l.getAttribute("href").includes(type)) {
+              if (l.getAttribute('href').includes(type)) {
                 l.disabled = false;
               }
             });
