--- a/src/image.html
+++ b/src/image.html
@@ -5,42 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>image load</title>
+    <!-- <require src="./util/baseTag.js" inline=true > -->
   </head>
   <body>
     <script>
       console.time();
       document.addEventListener(
-        "DOMContentLoaded",
+        'DOMContentLoaded',
         function() {
-          console.log("contentLoad!");
+          console.log('contentLoad!');
           console.timeEnd();
         },
         false
       );
       function LoadingImg() {
-        let imageArr = new Array(12).fill(1).map((item, index) => `/img/pic1${index}.jpg`);
+        let imageArr = new Array(12).fill(1).map((item, index) => `/img/pic${index}.jpg`);
         const imageHtml = imageArr
           .map(item => {
             return `<img src="${item}" title="${item}" />`;
           })
-          .join("");
+          .join('');
         const total = imageArr.length;
         let count = 0;
         const errArr = [];
-        document.querySelector("div.imgContent").innerHTML = imageHtml;
-        let loading = document.querySelector("div.loading");
+        document.querySelector('div.imgContent').innerHTML = imageHtml;
+        let loading = document.querySelector('div.loading');
         function update() {
-          loading.setAttribute("data-process", count);
-          loading.style.width = parseInt(Math.ceil((count / total) * 100)) + "%";
+          loading.setAttribute('data-process', count);
+          loading.style.width = parseInt(Math.ceil((count / total) * 100)) + '%';
           if (count == total) {
             // alert("finish");
             console.log(`finish: ${count}`);
-            console.log(`err: ${errArr.join("&")}`);
+            console.log(`err: ${errArr.join('&')}`);
           }
         }
         Array.from(document.images).forEach(img => {
           img.addEventListener(
-            "load",
+            'load',
             function() {
               count++;
               update();
@@ -51,17 +52,17 @@
             }
           );
           img.addEventListener(
-            "error",
+            'error',
             function(ev) {
               const retryTime = +this.dataset.retry || 0;
               if (retryTime == 3) {
                 count++;
                 errArr.push(ev.target.src);
               } else {
-                this.setAttribute("data-retry", retryTime + 1);
+                this.setAttribute('data-retry', retryTime + 1);
                 this.setAttribute(
-                  "src",
-                  this.getAttribute("src").replace(/\d+/, function(f) {
+                  'src',
+                  this.getAttribute('src').replace(/\d+/, function(f) {
                     return f.slice(1);
                   })
                 );
@@ -76,7 +77,7 @@
       };
       window.onpageshow = function() {
         window.addEventListener(
-          "error",
+          'error',
           function(ev) {
             console.log(ev.target.nodeName);
           },
@@ -115,7 +116,7 @@
         z-index: 0;
       }
       .dog:before {
-        content: "";
+        content: '';
         position: absolute;
         width: 100%;
         height: 100%;
@@ -139,8 +140,8 @@
       HELLO
     </div>
     <script async>
-      document.querySelector(".dog").onclick = function() {
-        console.log("innder");
+      document.querySelector('.dog').onclick = function() {
+        console.log('innder');
       };
     </script>
   </body>
