--- a/src/imgValid.html
+++ b/src/imgValid.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>valid image</title>
+    <!-- <require src="./util/baseTag.js" inline=true > -->
   </head>
   <body>
     <h1>imgValid</h1>
