--- a/src/test.html
+++ b/src/test.html
@@ -199,5 +199,81 @@
       }
       console.log(filter(arr));
     </script>
+
+    <div class="delete">
+      <div class="checkbox active"></div>
+      <div class="border"></div>
+      <div class="remove"></div>
+    </div>
+    <style>
+      .delete {
+        width: 100px;
+        height: 100px;
+        margin: 100px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        position: relative;
+      }
+      .delete .remove {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border: 2px solid red;
+        position: relative;
+        display: none;
+      }
+      .delete .checkbox {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        border: 3px solid #a29e9e;
+        border-radius: 50%;
+        background: #c7bebe;
+        top: 10px;
+        left: 10px;
+        box-shadow: inset 0px 1px 1px 0px #605b5b;
+      }
+      .delete .checkbox:before {
+        display: none;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        content: '';
+        background: #15ce25;
+        -webkit-clip-path: polygon(26% 37%, 18% 44%, 49% 73%, 90% 28%, 83% 21%, 49% 59%);
+        clip-path: polygon(26% 37%, 18% 44%, 49% 73%, 90% 28%, 83% 21%, 49% 59%);
+      }
+
+      .delete .border {
+        position: absolute;
+        width: 110px;
+        height: 110px;
+        border: 2px solid red;
+        display: none;
+      }
+      .delete .remove:before {
+        display: none;
+        content: '';
+        width: 2px;
+        height: 20px;
+        transform: scaleX(1.41) rotate(45deg) translateY(-4px);
+        background: red;
+        transform-origin: -50% 71%;
+      }
+      .delete:hover .border,
+      .delete:hover .remove,
+      .delete:hover .remove:before {
+        display: block;
+      }
+      .delete:hover .checkbox:before {
+        display: block;
+      }
+    </style>
+    <script></script>
   </body>
 </html>
