--- a/src/test.html
+++ b/src/test.html
@@ -70,6 +70,7 @@
   </head>
   <body>
     <h1>test</h1>
+    <h3><% lang.name %></h3>
     <div class="container">
       <ul data-top="900">
         <li data-name="jihaibo">react</li>
