--- a/src/imageCom.html
+++ b/src/imageCom.html
@@ -18,20 +18,13 @@
     <input type="file" id="file" />
     <br />
     <label>rate(0.01-1.00):</label>
-    <input
-      type="number"
-      min="0.01"
-      max="1.00"
-      step="0.01"
-      value="0.9"
-      id="rate"
-    />
+    <input type="number" min="0.01" max="1.00" step="0.01" value="0.9" id="rate" />
     <br />
     <p id="result"></p>
     <img src="" alt="" id="preview" />
     <script>
       function dealKb(size) {
-        const types = ["bite", "KB", "M", "G"];
+        const types = ['bite', 'KB', 'M', 'G'];
         const limit = 1024;
         let i = 0;
         while (size / limit >= 1) {
@@ -40,18 +33,18 @@
         }
         return Math.round(size * 100) / 100 + types[i];
       }
-      const file = document.querySelector("#file");
+      const file = document.querySelector('#file');
       file.addEventListener(
-        "change",
+        'change',
         function(ev) {
           const File = new FileReader();
           const data = ev.target.files[0];
           const originSize = dealKb(data.size);
           const imageType = data.type;
-          console.log("change111", data);
+          console.log('change111', data);
           File.readAsDataURL(data);
           File.onload = function(ev) {
-            console.log(ev);
+            console.log(ev, 'event');
             const img = new Image();
             img.src = ev.target.result;
             img.onload = function(ev) {
@@ -69,21 +62,24 @@
                   targetW = (maxHeight * originWidth) / originHeight;
                 }
               }
-              const canvas = document.createElement("canvas");
-              const context = canvas.getContext("2d");
+              const canvas = document.createElement('canvas');
+              const context = canvas.getContext('2d');
               canvas.width = targetW;
               canvas.height = targetH;
               context.clearRect(0, 0, targetW, targetH);
               context.drawImage(img, 0, 0, targetW, targetH);
-              const rate = document.querySelector("#rate").value || 0.92;
-              console.log(rate, 99999);
+              const rate = document.querySelector('#rate').value || 0.92;
               const result = canvas.toDataURL(imageType, +rate);
-              document.querySelector("#preview").src = result;
               let blob = new Blob([result], { type: imageType });
+              canvas.toBlob(function(blobObj) {
+                let imgSrc = window.URL.createObjectURL(blobObj);
+                console.log(imgSrc);
+                document.querySelector('#preview').src = imgSrc;
+              });
               let dealSize = dealKb(blob.size);
-              document.querySelector("#preview").onload = function(ev) {
+              document.querySelector('#preview').onload = function(ev) {
                 document.querySelector(
-                  "#result"
+                  '#result'
                 ).innerHTML = `from${originSize} reduce to ${dealSize}`;
               };
             };
