--- a/src/userAgent.html
+++ b/src/userAgent.html
@@ -11,7 +11,11 @@
     <div id="userAgent"></div>
     <script>
       const agent = navigator.userAgent;
-      document.querySelector("#userAgent").innerHTML = agent;
+      function show(a) {
+        return str;
+      }
+      alert(window.navigator.appVersion);
+      document.querySelector('#userAgent').innerHTML = Object.keys(window.navigator).join(' ');
     </script>
   </body>
 </html>
