--- a/src/preload.html
+++ b/src/preload.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>preload</title>
     <link rel="preload" as="script" href="./util/baseTag.js" />
+    <script>
+      var time = Date.now();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/2.1.10/chart/bar.js"></script>
+    <link rel="preload" href="https://unpkg.com/element-ui/lib/index.js" as="script" />
+    <link rel="preload" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" as="style" />
   </head>
   <body>
     <button type="button">click</button>
@@ -42,5 +49,15 @@
       };
     </script>
     <script src="./util/clipboard.js"></script>
+    <div>content load: <span class="time-content"></span></div>
+    <div>load: <span class="time-load"></span></div>
+    <script>
+      window.addEventListener('load', function() {
+        document.querySelector('.time-load').innerText = (Date.now() - time) / 1000;
+      });
+      window.addEventListener('DOMContentLoaded', function() {
+        document.querySelector('.time-content').innerText = (Date.now() - time) / 1000;
+      });
+    </script>
   </body>
 </html>
