--- a/src/taotao.html
+++ b/src/taotao.html
@@ -10,8 +10,13 @@
     <!-- <require src="./vendors/md5.min.js" inline=true gzip=false  > -->
     <h1>taotao</h1>
     <button class="btn">
-      send
+      商品列表
     </button>
+    <hr />
+    <div class="container">
+      <ul> </ul>
+    </div>
+    <br />
     <script>
       const btn = document.querySelector('.btn');
       const fetchGoodList = function() {
@@ -82,8 +87,41 @@
         color: red;
       }
     </style>
-    <div class="container">
-      <ul> </ul>
-    </div>
+    <button class="firstOrder">首单礼金</button>
+    <hr />
+    <script>
+      const fetchFirstList = function() {
+        const now = Date.now();
+        const random = Math.random()
+          .toString()
+          .slice(-6);
+        let screct = `appKey=5f807697ce768&timer=${now}&nonce=${random}&key=1142283cba22dfda852ac6c5e33aa9c3`;
+        let mdsScrect = md5(screct)
+          .toString()
+          .toUpperCase();
+        const api = 'https://openapi.dataoke.com/api/goods/first-order-gift-money';
+        let query = `appKey=5f807697ce768&nonce=${random}&timer=${now}&version=v1.2.3&pageId=1&signRan=${mdsScrect}&pageSize=10&pageId=1`;
+        fetch(`${api}?${query}`)
+          .then(res => {
+            return res.json();
+          })
+          .then(res => {
+            const data = res.data.list;
+            // data.forEach(item => {
+            //   str += `<li><a href="${item.couponLink}"><img src='${item.mainPic}' />
+            //         <p>${item.desc}</p>
+            //         <p>商品原价: ${item.originalPrice}</p>
+            //         <p class='red'>券后价: ${item.actualPrice}</p>
+            //         <p>折扣力度: ${item.discounts}</p>
+            //         <p class='red'>30天销量: ${item.monthSales}</p>
+            //         <p>热推值: ${item.hotPush}</p>
+            //         <p>描述分: ${item.descScore}</p>
+            //     </a></li>`;
+            // });
+            console.log(data);
+          });
+      };
+      document.querySelector('.firstOrder').addEventListener('click', fetchFirstList, false);
+    </script>
   </body>
 </html>
