--- a/src/touchAction.html
+++ b/src/touchAction.html
@@ -74,26 +74,26 @@
     </script>
     <script defer module>
       const addEventListenerConfig = { capture: false, passive: false };
-      let layer = document.querySelector(".layer");
-      let btn1 = document.querySelector(".action .btn-confirm");
-      let btn2 = document.querySelector(".action .btn-cancel");
+      let layer = document.querySelector('.layer');
+      let btn1 = document.querySelector('.action .btn-confirm');
+      let btn2 = document.querySelector('.action .btn-cancel');
       var beginX = 0;
       var actionWidth = 0;
       var done = false;
       layer.addEventListener(
-        "touchstart",
+        'touchstart',
         function(ev) {
           ev.preventDefault();
           if (done) return;
-          layer.classList.remove("move");
+          layer.classList.remove('move');
           beginX = ev.changedTouches[0].clientX;
           actionWidth = btn1.offsetWidth * 2 - 8;
-          log(ev, "touchstart");
+          log(ev, 'touchstart');
         },
         addEventListenerConfig
       );
       layer.addEventListener(
-        "touchmove",
+        'touchmove',
         function(ev) {
           ev.preventDefault();
           if (done) return;
@@ -101,47 +101,47 @@
           if (diff < 0) {
             layer.style.left = `${diff}px`;
           }
-          log(ev, "touchmove");
+          log(ev, 'touchmove');
         },
         addEventListenerConfig
       );
       layer.addEventListener(
-        "touchend",
+        'touchend',
         function(ev) {
           if (done) return;
-          log("touchend", actionWidth);
+          log('touchend', actionWidth);
           const diff = ev.changedTouches[0].clientX - beginX;
           if (diff < 0 && Math.abs(diff) > actionWidth / 2) {
-            layer.classList.add("move");
+            layer.classList.add('move');
             layer.style.left = `-${actionWidth}px`;
             done = true;
           } else {
-            layer.classList.add("move");
+            layer.classList.add('move');
             layer.style.left = `0px`;
           }
         },
         addEventListenerConfig
       );
       btn1.addEventListener(
-        "click",
+        'click',
         function() {
-          alert("confirm");
+          alert('confirm');
           done = false;
-          layer.classList.add("move");
-          layer.style.left = "0px";
+          layer.classList.add('move');
+          layer.style.left = '0px';
         },
         false
       );
       btn2.addEventListener(
-        "click",
+        'click',
         function() {
-          alert("delete");
+          alert('delete');
           const container = layer.parentNode;
-          container.classList.add("fadeout");
+          container.classList.add('fadeout');
           container.addEventListener(
-            "transitionend",
+            'transitionend',
             function() {
-              container.removeEventListener("transitionend");
+              container.removeEventListener('transitionend');
               container.parentNode.removeChild(container);
             },
             {
