--- a/src/userAgent.html
+++ b/src/userAgent.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>userAgent</title>
+    <script
+      async
+      src="//cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"
+      onload="initFingerprintJS()"
+    ></script>
   </head>
   <body>
+    <script>
+      function initFingerprintJS() {
+        FingerprintJS.load().then(fp => {
+          // The FingerprintJS agent is ready.
+          // Get a visitor identifier when you'd like to.
+          fp.get().then(result => {
+            // This is the visitor identifier:
+            const visitorId = result.visitorId;
+            console.log(result);
+          });
+        });
+      }
+    </script>
     <h1>userAgent</h1>
     <div id="userAgent"></div>
     <script>
@@ -14,7 +32,6 @@
       function show(a) {
         return str;
       }
-      alert(window.navigator.appVersion);
       document.querySelector('#userAgent').innerHTML = Object.keys(window.navigator).join(' ');
     </script>
   </body>
